--- a/OpenGL-Engine.vcxproj
+++ b/OpenGL-Engine.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
@@ -47,22 +47,22 @@
     <OutDir>$(SolutionDir)$(ProjectName)/out/$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)$(ProjectName)/out-int/$(Configuration)\</IntDir>
     <TargetName>gl</TargetName>
-    <IncludePath>$(SolutionDir)deps/glfw-3.3.4-x64/include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)deps/glfw-3.3.4-x64/lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)deps/glew-2.1.0/include;$(SolutionDir)deps/glfw-3.3.4-x64/include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)deps/glew-2.1.0/lib/Release/x64;$(SolutionDir)deps/glfw-3.3.4-x64/lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)$(ProjectName)/out/$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)$(ProjectName)/out-int/$(Configuration)\</IntDir>
     <TargetName>gl</TargetName>
-    <IncludePath>$(SolutionDir)deps/glfw-3.3.4-x64/include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)deps/glfw-3.3.4-x64/lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)deps/glew-2.1.0/include;$(SolutionDir)deps/glfw-3.3.4-x64/include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)deps/glew-2.1.0/lib/Release/x64;$(SolutionDir)deps/glfw-3.3.4-x64/lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>GLEW_STATIC;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -76,7 +76,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>GLEW_STATIC;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -89,10 +89,13 @@
   <ItemGroup>
     <ClCompile Include="src\common\application.cpp" />
     <ClCompile Include="src\gl.h" />
+    <ClCompile Include="src\rendering\buffer.cpp" />
     <ClCompile Include="src\window\window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\common.h" />
     <ClInclude Include="src\common\application.h" />
+    <ClInclude Include="src\rendering\buffer.h" />
     <ClInclude Include="src\window\window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
