--- a/OpenGL-Engine.vcxproj
+++ b/OpenGL-Engine.vcxproj
@@ -47,7 +47,7 @@
     <OutDir>$(SolutionDir)$(ProjectName)/out/$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)$(ProjectName)/out-int/$(Configuration)\</IntDir>
     <TargetName>gl</TargetName>
-    <IncludePath>$(SolutionDir)deps/glew-2.1.0/include;$(SolutionDir)deps/glfw-3.3.4-x64/include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir);$(SolutionDir)OpenGL-Engine/src;$(SolutionDir)deps/glew-2.1.0/include;$(SolutionDir)deps/glfw-3.3.4-x64/include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)deps/glew-2.1.0/lib/Release/x64;$(SolutionDir)deps/glfw-3.3.4-x64/lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -55,7 +55,7 @@
     <OutDir>$(SolutionDir)$(ProjectName)/out/$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)$(ProjectName)/out-int/$(Configuration)\</IntDir>
     <TargetName>gl</TargetName>
-    <IncludePath>$(SolutionDir)deps/glew-2.1.0/include;$(SolutionDir)deps/glfw-3.3.4-x64/include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir);$(SolutionDir)OpenGL-Engine/src;$(SolutionDir)deps/glew-2.1.0/include;$(SolutionDir)deps/glfw-3.3.4-x64/include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)deps/glew-2.1.0/lib/Release/x64;$(SolutionDir)deps/glfw-3.3.4-x64/lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -64,6 +64,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>GLEW_STATIC;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -78,6 +80,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>GLEW_STATIC;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -88,12 +92,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\common\application.cpp" />
-    <ClCompile Include="src\gl.h" />
+    <ClCompile Include="pch.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">pch.h</PrecompiledHeaderFile>
+    </ClCompile>
     <ClCompile Include="src\rendering\buffer.cpp" />
     <ClCompile Include="src\window\window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\common.h" />
+    <ClInclude Include="src\gl.h" />
+    <ClInclude Include="pch.h" />
     <ClInclude Include="src\common\application.h" />
     <ClInclude Include="src\rendering\buffer.h" />
     <ClInclude Include="src\window\window.h" />
