added sprite renderer

--- a/OpenGL-Engine.vcxproj
+++ b/OpenGL-Engine.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="src\rendering\buffer.cpp" />
     <ClCompile Include="src\rendering\render_commands.cpp" />
     <ClCompile Include="src\rendering\shader.cpp" />
+    <ClCompile Include="src\rendering\sprite_renderer.cpp" />
     <ClCompile Include="src\rendering\vertex_array.cpp" />
     <ClCompile Include="src\window\window.cpp" />
   </ItemGroup>
@@ -111,6 +112,7 @@
     <ClInclude Include="src\rendering\buffer.h" />
     <ClInclude Include="src\rendering\render_commands.h" />
     <ClInclude Include="src\rendering\shader.h" />
+    <ClInclude Include="src\rendering\sprite_renderer.h" />
     <ClInclude Include="src\rendering\vertex_array.h" />
     <ClInclude Include="src\window\window.h" />
   </ItemGroup>
