--- a/OpenGL-Engine.vcxproj.filters
+++ b/OpenGL-Engine.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\rendering\sprite.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\scene\orthographic_camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\window\window.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\rendering\sprite.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scene\orthographic_camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
