--- a/OpenGL-Engine.vcxproj
+++ b/OpenGL-Engine.vcxproj
@@ -106,6 +106,7 @@
     <ClCompile Include="src\rendering\vertex_array.cpp" />
     <ClCompile Include="src\scene\orthographic_camera.cpp" />
     <ClCompile Include="src\scene\transform.cpp" />
+    <ClCompile Include="src\window\input.cpp" />
     <ClCompile Include="src\window\window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -120,6 +121,7 @@
     <ClInclude Include="src\rendering\vertex_array.h" />
     <ClInclude Include="src\scene\orthographic_camera.h" />
     <ClInclude Include="src\scene\transform.h" />
+    <ClInclude Include="src\window\input.h" />
     <ClInclude Include="src\window\window.h" />
   </ItemGroup>
   <ItemGroup>
